--- a/src/DiceTapper/DiceTapper.module.css
+++ b/src/DiceTapper/DiceTapper.module.css
@@ -29,6 +29,11 @@
     cursor: pointer;
 }
 
+.aggregation {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .output {
     display: flex;
     flex-direction: column-reverse;
