--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,3 +1,12 @@
+.container {
+    max-width: 25rem;
+    padding: 1em;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    gap: 1em;
+    margin: auto;
+}
+
 .title {
     text-align: center;
 }
