--- a/src/DiceTapper/DiceTapper.module.css
+++ b/src/DiceTapper/DiceTapper.module.css
@@ -1,23 +1,18 @@
 .dice-tapper {
     font-family: var(--font-table);
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 1fr auto auto;
+    gap: 1em;
     text-transform: lowercase;
 
-    max-width: 15em;
-    margin: auto;
     border: 1px solid black;
 }
 
-.dice {
+.dice-container {
     border: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    row-gap: 0.5em;
 }
 
-.dice legend {
+.dice-container legend {
     margin: auto;
     font-family: var(--font-table-heading);
     font-weight: bold;
