--- a/src/DiceTapper/DieButton/DieButton.module.css
+++ b/src/DiceTapper/DieButton/DieButton.module.css
@@ -3,9 +3,9 @@
     display: grid;
     place-items: center center;
     background: none;
-    border: 1px solid blue;
+    border: none;
     padding: 0;
-    font-size: 2.5em;
+    font-size: 2em;
     margin: var(--margin);
     width: calc(100% - 2 * var(--margin));
     height: calc(100% - 2 * var(--margin));
@@ -13,12 +13,20 @@
 }
 
 .die-button .icon {
+    --die-color: var(--color-heading);
+    --die-width: 6;
     grid-column: 1;
     grid-row: 1;
-    width: 75%;
+    width: 100%;
+    height: 100%;
 }
 
 .die-button .label {
+    --outline-width: 0.125em;
+    --neg-outline-width: calc(-1 * var(--outline-width));
     grid-column: 1;
     grid-row: 1;
+    background-color: var(--color-bg);
+    padding: 0;
+    border-radius: 1em;
 }
