Use hsl colors since they are simpler to transform

--- a/src/DiceTapper/DieButton/DieButton.module.css
+++ b/src/DiceTapper/DieButton/DieButton.module.css
@@ -13,7 +13,7 @@
 }
 
 .die-button .icon {
-    --die-color: var(--color-heading);
+    --die-color: var(--color-primary);
     --die-width: 6;
     grid-column: 1;
     grid-row: 1;
