--- a/src/DiceTapper/DiceTapper.module.css
+++ b/src/DiceTapper/DiceTapper.module.css
@@ -10,12 +10,6 @@
     border: none;
 }
 
-.dice-container legend {
-    margin: auto;
-    font-family: var(--font-table-heading);
-    font-weight: bold;
-}
-
 .results {
     background-color: var(--color-bg-light);
     border-left: 0.125em solid var(--color-primary-dark);
@@ -45,6 +39,14 @@
     margin-bottom: 1em;
 }
 
+.aggregation output {
+    font-size: 2.5em;
+}
+
+.rolls output {
+    font-size: 1.75em;
+}
+
 .output {
     display: flex;
     flex-direction: column-reverse;
@@ -58,7 +60,6 @@
 }
 
 .output output {
-    font-size: 2.5em;
     min-height: 1em;
     text-align: center;
     margin-bottom: 0.125em;
