--- a/src/global.css
+++ b/src/global.css
@@ -22,6 +22,14 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
+a {
+    color: var(--color-primary);
+}
+
+a:hover {
+    text-decoration: none;
+}
+
 /* https://webaim.org/techniques/css/invisiblecontent/ */
 .visually-hidden {
     clip: rect(1px, 1px, 1px, 1px);
