--- a/src/DiceTapper/DieButton/DieButton.module.css
+++ b/src/DiceTapper/DieButton/DieButton.module.css
@@ -1,5 +1,6 @@
 .die-button {
     --margin: 12.5%;
+    position: relative;
     display: grid;
     place-items: center center;
     background: none;
@@ -10,6 +11,15 @@
     width: calc(100% - 2 * var(--margin));
     height: calc(100% - 2 * var(--margin));
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent
+}
+
+.die-button:hover .icon, .die-button:focus .icon {
+    --die-fill: var(--color-bg-light);
+}
+
+.die-button:hover .label, .die-button:focus .label {
+    background-color: var(--color-bg-light);
 }
 
 .die-button .icon {
@@ -29,4 +39,32 @@
     background-color: var(--color-bg);
     padding: 0;
     border-radius: 1em;
+}
+
+.die-button .pulse {
+    --die-color: var(--color-primary);
+    --die-width: 6;
+    grid-column: 1;
+    grid-row: 1;
+    position: absolute;
+    z-index: -1;
+    animation: pulse 0.25s ease-out;
+    animation-fill-mode: forwards;
+    animation-play-state: paused;
+}
+
+@keyframes pulse {
+    0% {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        filter: blur(0);
+    }
+
+    100% {
+        width: 125%;
+        height: 125%;
+        opacity: 0;
+        filter: blur(1em);
+    }
 }
