--- a/src/DiceTapper/DiceTapper.module.css
+++ b/src/DiceTapper/DiceTapper.module.css
@@ -18,6 +18,7 @@
     border-right: 0.125em solid var(--color-primary-dark);
     padding: 0.5em 0;
     position: relative;
+    margin-bottom: 1em;
 }
 
 .results::before {
