--- a/src/DiceTapper/DieButton/DieButton.module.css
+++ b/src/DiceTapper/DieButton/DieButton.module.css
@@ -5,13 +5,21 @@
     place-items: center center;
     background: none;
     border: none;
+    box-shadow: none;
+    color: var(--color-bg-text);
     padding: 0;
     font-size: 2em;
     margin: var(--margin);
     width: calc(100% - 2 * var(--margin));
     height: calc(100% - 2 * var(--margin));
-    cursor: pointer;
+    font-family: var(--font-table);
+    font-weight: bold;
     -webkit-tap-highlight-color: transparent
+}
+
+.die-button:hover, .die-button:active {
+    background: none;
+    box-shadow: none;
 }
 
 .die-button:hover .icon, .die-button:focus .icon {
