--- a/src/DiceTapper/DiceTapper.module.css
+++ b/src/DiceTapper/DiceTapper.module.css
@@ -51,11 +51,12 @@
 }
 
 .actions {
-    margin-bottom: 1em;
     font-size: 1.5em;
     display: flex;
+    margin: 0 -0.25em 1em;
 }
 
 .actions > * {
     flex: 1;
+    margin: 0 0.25em;
 }
